What's New in Python 2.2.3 ?
Release date: XX-XXX-2003
============================

- Through a bytecode optimizer bug (and I bet you didn't even know
  Python *had* a bytecode optimizer :-), "unsigned" hex/oct constants
  with a leading minus sign would come out with the wrong sign.
  ("Unsigned" hex/oct constants are those with a face value in the
  range sys.maxint+1 through sys.maxint*2+1, inclusive; these have
  always been interpreted as negative numbers through sign folding.)
  E.g. 0xffffffff is -1, and -(0xffffffff) is 1, but -0xffffffff would
  come out as -4294967295.  This was the case in Python 2.2 through
  2.2.2 and 2.3a1, and in Python 2.4 it will once again have that
  value, but according to PEP 237 it really needs to be 1 in Python
  2.2.3 and 2.3.  (SF #660455)

- SF bug #678518:  fix some bugs in the parser module.  

- Bastion.py and rexec.py are disabled.  These modules are not safe in
  Python 2.2. or 2.3.

- SF #676155: fixed errors when trying to convert a long integer
  into a float which couldn't fit.

- SF #660476 and #513033: broken threadstate swap in readline could
  cause fatal errors when a readline hook was being invoked while a
  background thread was active.

- SF #623669: a class that inherits __rdiv__ (or another __r*__
  operator) could end up with infinite recursion.

- Fixed sundry memory leaks.

- Improve the robustness of the methods for random distributions so
  they can work with generators producing a full range of values
  (unlike the Wichmann-Hill generator which never produces a zero).
  The range of u=random() is [0,1), so log(u) and 1/x can fail.  Fix
  by setting u=1-random() or by reselecting for a usable value.

- SF #659709: bogus float length computation during string formatting.

- Deleted the __del__ method on socket wrappers; it's not needed and
  prevents GC to work.

- Exceptions raised by __cmp__ weren't always properly handled and
  could cause "exception set without error return" failures.
